--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div style="width:960px;margin-right:auto;margin-left:auto;margin-top:36px">
 <div>
 
-  
+
   <div style="display:inline-block;width:68%;">
   <h3 style= "font-size:42px;font-weight:700;text-align:left"> SOBRE HADAS </h3>
 <div>
@@ -87,7 +87,7 @@
   <p style="display:inline-block;width:100%;text-align:center;padding:16px;">
 <img src="../cv/corpiños.jpeg" width="110%">
   <p style="display:inline-block;width:100%;text-align:center;padding:16px;">
-<img src="../cv/hadass.jpeg"  width="110%x":height="300px";"text-align:left;">
+<img src="../fotoscv/hadass.jpeg" width="110%x":height="300px";"text-align:left;"> 
 
 
 
